--- a/Esami/Esame_2022_01_18/Esercizio2.html
+++ b/Esami/Esame_2022_01_18/Esercizio2.html
@@ -6,11 +6,11 @@
     <body>
         <div>
             <div>
+                <span>Abruzzo</span>
+                <span>Basilicata</span>
                 <span>Calabria</span>
-                <span>Calabria</span>
-                <span>Calabria</span>
-                <span>Calabria</span>
-                <span>Calabria</span>
+                <span>Campania</span>
+                <span>Emilia-Romagna</span>
             </div>
             <div>
                 <span>Confronta le Bandiere Blu in Calabria:</span>
@@ -18,23 +18,27 @@
                     <label><input type="checkbox" checked>Trebisacce</label>
                     <label><input type="checkbox">Trebisacce</label>
                     <label><input type="checkbox">Trebisacce</label>
-                    <label><input type="checkbox" checked>Trebisacce</label>
+                    <label><input type="checkbox" checked>Roccella Jonica</label>
                 </div>
                 <div>
                     <div>
-                        <h2>Trebisacce</h2>
-                        <p>
-                            <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/trebisacce.jpg">
-                            <a href="fakePage.html">Trebisacce è un comune di 8.756 abitanti della provincia di Cosenza. Il territorio del comune confina con quelli di Albidona a nord ovest, di Plataci a sud ovest, e di Villapiana a sud, mentre ad est è limitato dal Mar Ionio. Il dialetto locale appartiene al dialetto calabro-lucano, e più precisamente all'area Lasberg, un'area linguistica estremamente conservativa studiata appunto dal glottologo tedesco Heinrich Lausberg. Quest'area rappresenta delle analogie dialettali con il sardo, avendo avuto una latinizzazione tardiva...</a>
-                        </p>
+                        <div>
+                            <h2>Trebisacce</h2>
+                            <p>
+                                <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/trebisacce.jpg">
+                                <a href="fakePage.html">Trebisacce è un comune di 8.756 abitanti della provincia di Cosenza. Il territorio del comune confina con quelli di Albidona a nord ovest, di Plataci a sud ovest, e di Villapiana a sud, mentre ad est è limitato dal Mar Ionio. Il dialetto locale appartiene al dialetto calabro-lucano, e più precisamente all'area Lasberg, un'area linguistica estremamente conservativa studiata appunto dal glottologo tedesco Heinrich Lausberg. Quest'area rappresenta delle analogie dialettali con il sardo, avendo avuto una latinizzazione tardiva...</a>
+                            </p>
+                        </div>
+                        <div>
+                            <h2>Roccella Jonica</h2>
+                            <p>
+                                <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/roccella.jpg">
+                                <a href="fakePage.html">Roccella Ionica o Roccella Jonica (Rucceja in dialetto roccellese) è un comune italiano di 6.360 abitant della provincia di Reggio Calabria in Calabria. Il comune si trova sulla Costa Jonica denominata Riviera o Costa dei Gelsomini e, probabilmente, sorge sull'antica città magnogreca di Amfissa. È un comune bagnato dal Mar Jonio, con un territorio pianeggiante sul mare e collinare nell'entroterra. Il comune è raggiungibile in auto attraverso la statale jonica 106, che percorre tutta la costa calabrese affacciata sul mar Jonio...</a>
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <h2>Roccella Jonica</h2>
-                        <p>
-                            <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/roccella.jpg">
-                            <a href="fakePage.html">Roccella Ionica o Roccella Jonica (Rucceja in dialetto roccellese) è un comune italiano di 6.360 abitant della provincia di Reggio Calabria in Calabria. Il comune si trova sulla Costa Jonica denominata Riviera o Costa dei Gelsomini e, probabilmente, sorge sull'antica città magnogreca di Amfissa. È un comune bagnato dal Mar Jonio, con un territorio pianeggiante sul mare e collinare nell'entroterra. Il comune è raggiungibile in auto attraverso la statale jonica 106, che percorre tutta la costa calabrese affacciata sul mar Jonio...</a>
-                        </p>
-                    </div>
+                    <span>Bandiera blu è un eco-label volontario assegnato alle localit&agrave turistiche balneari che rispettano criteri relativi alla gestione sostenibile del territorio.</span>
+                    <span>Per informazioni visiti: <a href="">http://www.bandierablu.org</a></span>
                 </div>
             </div>
         </div>
