--- a/Esami/Esame_2022_02_10/Esercizio2.html
+++ b/Esami/Esame_2022_02_10/Esercizio2.html
@@ -1,44 +1,60 @@
-<!DOCTYPE html>
+<!DOCTYPE hmtl>
 <html>
     <head>
-        <link text="text/css" rel="stylesheet" href="Esercizio2.css">
+        <title>Esercizio 2 Esame 10/02/2022</title>
+        <meta charset="UTF-8">
+        <link type="text/css" rel="stylesheet" href="Esercizio2.css">
     </head>
     <body>
+        <nav>
+            <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1002/euflag.png" alt="logoEU.png">
+            <p>Un sito ufficiale dell'Unione Europea</p>
+        </nav>
         <div>
-            <header>
-                <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1002/euflag.png">
-                <p>Un sito ufficiale dell'Unione Europea</p>
-            </header>
             <h1>Notizie, eventi e pubblicazioni</h1>
+        </div>
+        <div>
             <div>
                 <div>
-                    <div>
-                        <p>COMUNICATO STAMPA | 8 Febbraio 2022</p>
-                        <p>Sovranit&agrave digitale: la Commissione propone una legga per far fronte alle carenze di semiconduttori e rafforzare la leadership tecnologica dell'Europa</p>
-                    </div>
-                    <div>
-                        <p>COMUNICATO STAMPA | 8 Febbraio 2022</p>
-                        <p>Sovranit&agrave digitale: la Commissione propone una legga per far fronte alle carenze di semiconduttori e rafforzare la leadership tecnologica dell'Europa</p>
-                    </div>
-                    <div>
-                        <p>COMUNICATO STAMPA | 8 Febbraio 2022</p>
-                        <p>Sovranit&agrave digitale: la Commissione propone una legga per far fronte alle carenze di semiconduttori e rafforzare la leadership tecnologica dell'Europa</p>
-                    </div>
+                    <span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
+                    <a href="fakePage.html">
+                        <p>
+                            Sovranità digitale: la Commissione propone una legge per far fronte alle carenze dei semiconduttori e rafforzare la leadership tecnologica in Europa
+                        </p>
+                    </a>
                 </div>
                 <div>
+                    <span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
                     <a href="fakePage.html">
-                        <div>
-                            <h2>Eventi</h2>
-                            <p>Prossimi eventi organizzati dall'Unione Europea.</p>
-                        </div>
-                        <div>
-                            <h2>Pubblicazioni</h2>
-                            <p>Pubblicazioni dell'EU accessibili EU Bookshop e altre fonti.</p>
-                        </div>
+                        <p>
+                            Sovranità digitale: la Commissione propone una legge per far fronte alle carenze dei semiconduttori e rafforzare la leadership tecnologica in Europa
+                        </p>
+                    </a>
+                </div>
+                <div>
+                    <span>COMUNICATO STAMPA | 8 Febbraio 2020</span>
+                    <a href="fakePage.html">
+                        <p>
+                            Sovranità digitale: la Commissione propone una legge per far fronte alle carenze dei semiconduttori e rafforzare la leadership tecnologica in Europa
+                        </p>
                     </a>
                 </div>
             </div>
-            <h2>Tutte le notizie ></h2>
+            <div>
+                <a href="fakePage.html">
+                    <div>
+                        <h2>Eventi</h2>
+                        <p>Prossimi eventi organizzati dalla Commissione europea.</p>
+                    </div>
+                </a>
+                <a href="fakePage.html">
+                    <div>
+                        <h2>Pubblicazioni</h2>
+                        <p>Pubblicazione dell'EU accessibili da EU bookshop e da altre fonti.</p>
+                    </div>
+                </a>
+            </div>
+            <p>Tutte le notizie</p>
         </div>
     </body>
 </html>
