--- a/Esami/Esame_2022_02_10/Esercizio4.html
+++ b/Esami/Esame_2022_02_10/Esercizio4.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
-<html>
+<hmtl>
     <head>
         <style>
-            body>div {
-                width: 100%;
-                height: auto;
+            html, body {
+                text-align: center;
+                width: 100vw;
+                height: 100vh;
+                margin: 0;
+                padding: 0;
             }
 
-            body>div>div {
+            #container {
                 text-align: center;
-                width: 10%;
-                padding: 2rem;
+                width: 15%;
+                padding: 1rem;
+                margin: auto;
                 border: 2px solid black;
             }
 
-            table {
-                width: 100%;
-                margin-bottom: 1rem;
+            #container>div {
+                display: flex;
+                flex-direction: row;
+                gap: 0.25rem;
             }
 
-            td {
-                background-color: grey;
+            h2 {
+                width: 50%;
+            }
+
+            label {
+                width: 50%;
+                padding: 0.25rem;
+                background-color: lightgrey;
+            }
+
+            input {
+                margin-top: 1rem;
             }
         </style>
         <script src="Esercizio4.js"></script>
     </head>
     <body>
-        <div>
-            <h1>Weekend o lavorativo?</h1>
+        <div id="container">
             <div>
-                <table>
-                    <tr>
-                        <th>Weekend</th>
-                        <th>Lavorativo</th>
-                    </tr>
-                    <tr>
-                        <td id="td-holiday-day">0</td>
-                        <td id="td-working-day">0</td>
-                    </tr>
-                </table>
-                <input id="input-date" type="date">
+                <h2>Weekend</h2>
+                <h2>Lavorativo</h2>
+            </div>
+            <div>
+                <label id="weekend">0</label>
+                <label id="lavorativo">0</label>
             </div>
         </div>
+        <input id="input-date" type="date">
     </body>
-</html>
+</hmtl>
