--- a/Esami/Esame_2022_01_18/Esercizio2.html
+++ b/Esami/Esame_2022_01_18/Esercizio2.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="Esercizio2.css">
+        <meta charset="UTF-8">
+        <link type="text/css" rel="stylesheet" href="Esercizio2.css">
     </head>
     <body>
         <div>
+            <nav>
+                <a><span>Abruzzo</span></a>
+                <a><span>Basilicata</span></a>
+                <a><span>Calabria</span></a>
+                <a><span>Campania</span></a>
+                <a><span>Emilia-Romagna</span></a>
+            </nav>
             <div>
-                <span>Abruzzo</span>
-                <span>Basilicata</span>
-                <span>Calabria</span>
-                <span>Campania</span>
-                <span>Emilia-Romagna</span>
-            </div>
-            <div>
-                <span>Confronta le Bandiere Blu in Calabria:</span>
+                <span>Confronta le bandiere blu in Calabria:</span>
                 <div>
                     <label><input type="checkbox" checked>Trebisacce</label>
-                    <label><input type="checkbox">Trebisacce</label>
-                    <label><input type="checkbox">Trebisacce</label>
+                    <label><input type="checkbox">Cir&ograve marina</label>
+                    <label><input type="checkbox">Melissa</label>
                     <label><input type="checkbox" checked>Roccella Jonica</label>
                 </div>
                 <div>
                     <div>
-                        <div>
-                            <h2>Trebisacce</h2>
-                            <p>
-                                <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/trebisacce.jpg">
-                                <a href="fakePage.html">Trebisacce è un comune di 8.756 abitanti della provincia di Cosenza. Il territorio del comune confina con quelli di Albidona a nord ovest, di Plataci a sud ovest, e di Villapiana a sud, mentre ad est è limitato dal Mar Ionio. Il dialetto locale appartiene al dialetto calabro-lucano, e più precisamente all'area Lasberg, un'area linguistica estremamente conservativa studiata appunto dal glottologo tedesco Heinrich Lausberg. Quest'area rappresenta delle analogie dialettali con il sardo, avendo avuto una latinizzazione tardiva...</a>
-                            </p>
-                        </div>
-                        <div>
-                            <h2>Roccella Jonica</h2>
-                            <p>
-                                <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/roccella.jpg">
-                                <a href="fakePage.html">Roccella Ionica o Roccella Jonica (Rucceja in dialetto roccellese) è un comune italiano di 6.360 abitant della provincia di Reggio Calabria in Calabria. Il comune si trova sulla Costa Jonica denominata Riviera o Costa dei Gelsomini e, probabilmente, sorge sull'antica città magnogreca di Amfissa. È un comune bagnato dal Mar Jonio, con un territorio pianeggiante sul mare e collinare nell'entroterra. Il comune è raggiungibile in auto attraverso la statale jonica 106, che percorre tutta la costa calabrese affacciata sul mar Jonio...</a>
-                            </p>
-                        </div>
+                        <h2>Trebisacce</h2>
+                        <p>
+                            <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/trebisacce.jpg" alt="panorama.png">
+                            <a href="fakePage.html">Trebisacce è un comune di 8.756 abitanti della provincia di Cosenza. Il territorio del comune confina con quelli di Albidona a nord ovest, di Plataci a sud ovest, e di Villapiana a sud, mentre ad est è limitato dal Mar Ionio. Il dialetto locale appartiene al dialetto calabro-lucano, e più precisamente all'area Lasberg, un'area linguistica estremamente conservativa studiata appunto dal glottologo tedesco Heinrich Lausberg. Quest'area rappresenta delle analogie dialettali con il sardo, avendo avuto una latinizzazione tardiva...</a>
+                        </p>
                     </div>
-                    <span>Bandiera blu è un eco-label volontario assegnato alle localit&agrave turistiche balneari che rispettano criteri relativi alla gestione sostenibile del territorio.</span>
-                    <span>Per informazioni visiti: <a href="">http://www.bandierablu.org</a></span>
+                    <div>
+                        <h2>Roccella Jonica</h2>
+                        <p>
+                            <img src="http://diiorio.nws.cs.unibo.it/twe/resources/1801/roccella.jpg" alt="panorama.png">
+                            <a href="fakePage.html" >Roccella Ionica o Roccella Jonica (Rucceja in dialetto roccellese) è un comune italiano di 6.360 abitant della provincia di Reggio Calabria in Calabria. Il comune si trova sulla Costa Jonica denominata Riviera o Costa dei Gelsomini e, probabilmente, sorge sull'antica città magnogreca di Amfissa. È un comune bagnato dal Mar Jonio, con un territorio pianeggiante sul mare e collinare nell'entroterra. Il comune è raggiungibile in auto attraverso la statale jonica 106, che percorre tutta la costa calabrese affacciata sul mar Jonio...</a>
+                        </p>
+                    </div>
                 </div>
+                <footer>
+                    <span>Bandiera Blu è un eco-label volontariato assegnato alle località turistiche balneari che rispettano criteri relative alla gestione sostenibile del territorio.</span>
+                    <span>Per informazioni visita: <a href="fakePage.html">link</a></span>
+                </footer>
             </div>
         </div>
     </body>
