--- a/Esami/Esame_2022_01_18/Esercizio4.html
+++ b/Esami/Esame_2022_01_18/Esercizio4.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <style>
-            body, html {
-                max-width: 100vw;
-                max-height: 100vh;
-                padding: 1rem;
+            html {
+                width: 100vw;
+                height: 100vh;
+                padding: 0;
                 margin: 0;
             }
 
-            body>div {
-                display: grid;
+            body {
                 text-align: center;
+                width: 100%;
+            }
+
+            div {
+                display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
                 grid-template-rows: 1fr 1fr 1fr 1fr;
                 grid-template-areas: 
@@ -19,45 +24,39 @@
                 "s3 s4 s2"
                 "s5 s5 s2"
                 "s6 s6 s6";
-                width: 25%;
-                height: auto;
+                width: 50%;
+                margin: auto;
                 gap: 1rem;
+            }
+
+            div>span {
+                border-radius: 10px;
+                border: 2px solid black;
+                background-color: lightblue;
             }
 
             #s1 {
                 grid-area: s1;
-                background-color: lightblue;
-                border: 2px solid black;
             }
 
             #s2 {
                 grid-area: s2;
-                background-color: lightblue;
-                border: 2px solid black;
             }
 
             #s3 {
                 grid-area: s3;
-                background-color: lightblue;
-                border: 2px solid black;
             }
 
             #s4 {
                 grid-area: s4;
-                background-color: lightblue;
-                border: 2px solid black;
             }
 
             #s5 {
                 grid-area: s5;
-                background-color: lightblue;
-                border: 2px solid black;
             }
 
             #s6 {
                 grid-area: s6;
-                background-color: lightblue;
-                border: 2px solid black;
             }
         </style>
     </head>
