--- a/Esami/Esame_2021_06_24/Esercizio4.html
+++ b/Esami/Esame_2021_06_24/Esercizio4.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            body, html {
-                max-width: 100vw;
-                max-height: 100vh;
-                padding: 1rem;
-                margin: 0;
-            }
-        </style>
         <script src="Esercizio4.js"></script>
     </head>
     <body>
-        <input type="text" id="my-input">
-        <button id="my-button" on_click="getFirstCharacter()">Click here!</button>
-        <p id="my-p" style="visibility: hidden;">NaN</p>
+        <label id="input" style="visibility: hidden;">NaN</label>
+        <br>
+        <label id="output" style="visibility: hidden;">NaN</label>
     </body>
 </html>
