--- a/Esami/Esame_2021_06_03/Esercizio2.html
+++ b/Esami/Esame_2021_06_03/Esercizio2.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="Esercizio2.css">
     </head>
     <body>
-        <div class="container">
-            <div id="div-hotel">
+        <div>
+            <div>
                 <div>
-                    <img>
+                    <img src="http://diiorio.nws.cs.unibo.it/twe/api/resort/images/delfino.png" alt="logo.png">
                     <p><span>Nome:</span> Resort Delfino</p>
-                    <p><span>Indirizzo:</span> Lungomare sud - Rimini</p>
+                    <p><span>Indirizzo:</span> Lungomare Sud - Rimini</p>
                     <input type="radio">
                 </div>
                 <div>
-                    <img>
+                    <img src="http://diiorio.nws.cs.unibo.it/twe/api/resort/images/dune.png" alt="logo.png">
                     <p><span>Nome:</span> Resort Dune</p>
-                    <p><span>Indirizzo:</span> Lungomare sud - Rimini</p>
+                    <p><span>Indirizzo:</span> Lungomare Nord - Rimini</p>
                     <input type="radio">
                 </div>
             </div>
-            <div id="div-form">
+            <div>
                 <h2>Aggiorna descrizione:</h2>
-                <textarea placeholder="Un resort meraviglioso con vista delfinario..."></textarea>
+                <textarea>Un resolt meraviglioso con vista delfinario...</textarea>
                 <div>
-                    <button>Invia</button>
-                    <button>Annulla</button>
+                    <button type="submit">Invia</button>
+                    <button type="submit">Annulla</button>
                 </div>
             </div>
         </div>
