--- a/Esami/Esame_2021_06_03/Esercizio3.html
+++ b/Esami/Esame_2021_06_03/Esercizio3.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="Esercizio2.css">
+        <script src="Esercizio3.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div id="div-hotel">
-                <div>
-                    <img>
-                    <p><span>Nome:</span> </p>
-                    <p><span>Indirizzo:</span> </p>
-                    <input type="radio">
-                </div>
-                <div>
-                    <img>
-                    <p><span>Nome:</span> </p>
-                    <p><span>Indirizzo:</span> </p>
-                    <input type="radio">
-                </div>
+        <div>
+            <div id="div-resorts">
+            
             </div>
-            <div id="div-form">
+            <div>
                 <h2>Aggiorna descrizione:</h2>
-                <textarea placeholder="Un resort meraviglioso con vista delfinario..."></textarea>
+                <textarea id="descrizione-resort"></textarea>
                 <div>
-                    <button>Invia</button>
-                    <button>Annulla</button>
+                    <button type="submit">Invia</button>
+                    <button type="submit">Annulla</button>
                 </div>
             </div>
         </div>
