completati esercizi Lecture_5

--- a/Esercizi_Lecture/Esercizi_Lect5/Esercizio2.html
+++ b/Esercizi_Lecture/Esercizi_Lect5/Esercizio2.html
@@ -1,34 +1,72 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="http://diiorio.nws.cs.unibo.it/twe/lib/jquery-3.6.0-dist/jquery-3.6.0.js"></script>
-        <script src="Esercizio2.js"></script>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="Esercizio2.css">
+        <script src="Esercizio2.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div class="div-title">
-                <h1>Lista dei desideri</h1>
-                <h2>Prodotti</h2>
+        <div>
+            <div>
+                <h1>Dettagli degli eventi</h1>
+                <p>Dai un'occhiata ai nostri ultimi concerti ed eventi per unirti a noi.</p>
             </div>
-            <div class="div-products">
-                <div>
-                    <label>Prodotto 1</label><button id="button-first-product" on_click="addProduct()">Aggiungi alla lista</button>
+            <div>
+                <h2>Elenco eventi</h2>
+                <div> 
+                    <div>
+                        <span><a href=""><b>Sunny Hill Festival</b></a></span>
+                        <span>140 biglietti disponibili</span>
+                    </div>
+                    <div>
+                        <span>Sep 16, 2023</span>
+                        <span>9:00</span>
+                        <span>-</span>
+                        <span>12:00</span>
+                    </div>
+                    <div>
+                        <span>Spiagga di Copacabana, Rio de Jainero</span>
+                    </div>
+                    <div>
+                        <a href="ticket-details.html">Acquista Biglietti</a>
+                    </div>
                 </div>
-                <div>
-                    <label>Prodotto 2</label><button id="button-second-product" on_click="addProduct()">Aggiungi alla lista</button>
+                <div> 
+                    <div>
+                        <span><a href=""><b>Sunny Hill Festival</b></a></span>
+                        <span>140 biglietti disponibili</span>
+                    </div>
+                    <div>
+                        <span>Sep 16, 2023</span>
+                        <span>9:00</span>
+                        <span>-</span>
+                        <span>12:00</span>
+                    </div>
+                    <div>
+                        <span>Spiagga di Copacabana, Rio de Jainero</span>
+                    </div>
+                    <div>
+                        <a href="ticket-details.html">Acquista Biglietti</a>
+                    </div>
                 </div>
-                <div>
-                    <label>Prodotto 3</label><button id="button-third-product" on_click="addProduct()">Aggiungi alla lista</button>
+                <div> 
+                    <div>
+                        <span><a href=""><b>Sunny Hill Festival</b></a></span>
+                        <span>140 biglietti disponibili</span>
+                    </div>
+                    <div>
+                        <span>Sep 16, 2023</span>
+                        <span>9:00</span>
+                        <span>-</span>
+                        <span>12:00</span>
+                    </div>
+                    <div>
+                        <span>Spiagga di Copacabana, Rio de Jainero</span>
+                    </div>
+                    <div>
+                        <a href="ticket-details.html">Acquista Biglietti</a>
+                    </div>
                 </div>
-            </div>
-            <div class="div-title">
-                <h2>La tua lista dei desideri</h2>
-            </div>
-            <div class="div-dreams">
-                <p id="paragraph-first-product" style="visibility: hidden;">Prodotto 1: <span id="span-first-product">0</span></p>
-                <p id="paragraph-second-product" style="visibility: hidden;">Prodotto 2: <span id="span-second-product">0</span></p>
-                <p id="paragraph-third-product" style="visibility: hidden;">Prodotto 3: <span id="span-third-product">0</span></p>
             </div>
         </div>
     </body>
