--- a/Esami/Esame_2023_01_01/Esercizio2.html
+++ b/Esami/Esame_2023_01_01/Esercizio2.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link type="text/css" rel="stylesheet" href="Esercizio1.css">
-        <meta type="text/html" charset="UTF-8">
+        <title>Esercizio 1 Esame 01/01/2023</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="Esercizio1.css">
+        <script src="Esercizio2.js"></script>
     </head>
     <body>
         <h1>Gran tour in Europa</h1>
         <nav>
-            <a id="a-africa" href=/africa>Viaggi in Africa</a>
-            <a id="a-europe" href=/europa class="selected">Viaggi in Europa</a>
-            <a id="a-australia" href=/oceania>Viaggi in Oceania</a>
-            <a id="a-asia" href=/asia>Viaggi in Asia</a>
+            <a id="a-africa" name="Africa">Viaggi in Africa</a>
+            <a id="a-europa" name="Europa">Viaggi in Europa</a>
+            <a id="a-oceania" name="Oceania">Viaggi in Oceania</a>
+            <a id="a-asia" name="Asia">Viaggi in Asia</a>
         </nav>
-        <h2>Le fantastiche città da visitare in Europa:</h2>
+        <h2 id="header-country"></h2>
         <form>
-            <ol id="list-cities">
-    
+            <ol id="ol-cities">
+                
             </ol>
         </form>
         <div>
-            <h2>Descrizione del viaggio a Torino:</h2>
+            <h2 id="header-city"></h2>
             <table>
                 <thead>
-                    <th><td>numero partecipanti</td><th>prezzo (a persona)</th></th> <!-- mancanza del tag "<tr>" all'interno della tabella -->
+                    <td>numero partecipanti</td><th>prezzo (a persona)</th> 
                 </thead>
                 <tbody>
                     <tr><td>da 1 a 3</td><td>€ 500</td></tr>
@@ -36,7 +37,7 @@
             Cinema, Mole Antonelliana e Palazzo Madama.</p>
             <p>Viaggia con noi attraverso un territorio dal fascino
             straordinario, tra arte e storia, natura e cultura, sport e tradizione. In
-            provincia di Torino la scoperta non ha mai fine, dalla prima capitale d’Italia
+            provincia di Torino la scoperta non ha mai fine, dalla prima capitale d'Italia
             alle Alpi delle Olimpiadi, dalle colline del Canavese alle vette del Gran
             Paradiso.</p>
             <p>Dal Palazzo Reale al Santuario della Consolata, dal Teatro
