--- a/Esami/Esame_2023_01_02/Esercizio2.html
+++ b/Esami/Esame_2023_01_02/Esercizio2.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta naem="viewport" content="width=width-device, initial-scale=1.0"> 
         <script src="Esercizio2.js"></script>
     </head>
     <body>
-        <p id="myParagraph" style="visibility: hidden;">Nan</p>
-        <button id="myButton">Clicca qui!</button>
+        <input id="input" type="text">
+        <button id="button-click">Invia</button>
+        <p id="output"></p>
     </body>
 </html>
